@@ -7,6 +7,8 @@ dbus (1.6.8-1+exp1) UNRELEASED; urgency=low
   * debian/rules: factor out production and debug configure flags
   * Add support for DEB_BUILD_OPTIONS=nodocs, which omits most documentation
     (allowing doxygen and xmlto to be avoided)
+  * In the debug build, do not insist on building all tests if
+    DEB_BUILD_PROFILE=stage1
 
  -- Simon McVittie <smcv@debian.org>  Mon, 01 Oct 2012 14:49:32 +0100
 
